[project]
name = "sample-agent-single" # adk"
homepage = "https://github.com/AgentWorkshop/sample-agent-single"
version = "0.1.0"
repository = "git@github.com:AgentWorkshop/sample-agent-single.git"
description = "Sample Google ADK-based Expense Reimbursement agent hosted as an A2A server." 
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "google-adk>=0.0.3",
    "google-genai>=1.9.0",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
