[project]
name = "adk-client"
version = "0.1.0"
description = "A CLI application that demonstrates the capabilities of an A2AClient."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "google-adk",
    "asyncclick>=8.1.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "jwcrypto>=1.5",
    "PyJWT>=2.0",
    "prompt_toolkit>=3.0.43",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"